# QMS

./: .gitignore  Anchor.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
programs/qms_mint/: Cargo.toml
programs/qms_mint/client/: example.ts
programs/qms_mint/idl/: qms_mint.json
programs/qms_mint/src/: errors.rs  events.rs  lib.rs  state.rs
programs/qms_mint/tests/: qms_mint.ts
public/: robots.txt  site.webmanifest  sitemap.xml
scripts/: initConfig.js
server/: .env.example  index.js  package-lock.json  package.json
server/worker/: package-lock.json  package.json  wrangler.toml
server/worker/src/: index.js
src/: App.jsx  index.css  main.jsx
src/components/cards/: InfoCard.jsx  SummaryCard.jsx  WarningCard.jsx
src/components/feedback/: ErrorBoundary.jsx  Toast.jsx
src/config/: app.config.js  authority.config.js  fees.config.js  routes.config.js  solana.config.js  solanaNetworks.js
src/constants/: authorityModes.js  explorers.js  networks.js  tokenDefaults.js  uiText.js
src/context/: AuthorityContext.jsx  MintContext.jsx  UIContext.jsx
src/hooks/: useAuthorityMode.js  useConfirmGuard.js  useMintFlow.js  useTxStatus.js  useWallet.js
src/idl/: qms_mint.json
src/layouts/: MainLayout.jsx  scris.jxs
src/providers/: QMSWalletModalProvider.jsx  SolanaNetworkContext.jsx  SolanaWalletProvider.jsx
src/store/: mintStore.js  uiStore.js
src/styles/: animations.css  variables.css
src/utils/: estimateFees.js  formatSOL.js  shortenAddress.js  validateMultisig.js  validatePDA.js
(+46 files in other folders)
