[package]
name = "qms_mint"
version = "0.1.0"
description = "QMS mint program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "qms_mint"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features = ["metadata"] }
mpl-token-metadata = "4.1.2"
blake3 = "=1.5.1"
